tests/rosetta/transpiler/Zig/call-a-function-7.error
zig build: exit status 1
/tmp/call-a-function-7.zig:11:14: error: unused function parameter
/tmp/call-a-function-7.zig:11:6: error: unused function parameter
/tmp/call-a-function-7.zig:15:21: error: unused function parameter
/tmp/call-a-function-7.zig:15:6: error: unused function parameter
