tests/rosetta/transpiler/Zig/call-a-function-7.zig
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:01:22Z
const std = @import("std");

fn f() []const i32 {
    return [_]i32{
    0,
    0.0,
};
}

fn g(a: i32, b: f64) i32 {
    return 0;
}

fn h(s: []const u8, nums: []const i32) void {
}

fn user_main() void {
    if (((2 * g(1, 3.0)) + 4) > 0) {
    }
}

pub fn main() void {
    user_main();
}
